[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ground/WallPiece.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ground/WallPieceSpawner.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Node2D" type="Node2D"]
position = Vector2( 0, -96 )
script = ExtResource( 2 )
WallPiece = ExtResource( 1 )

[node name="SpawnTrigger" type="Area2D" parent="."]
position = Vector2( 0, 640 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnTrigger"]
shape = SubResource( 1 )

[node name="DeleteTrigger" type="Area2D" parent="."]
position = Vector2( 0, 832 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeleteTrigger"]
shape = SubResource( 1 )

[node name="WallPiece" parent="." instance=ExtResource( 1 )]
[connection signal="area_entered" from="SpawnTrigger" to="." method="_on_area_entered"]
[connection signal="area_exited" from="DeleteTrigger" to="." method="_on_area_exited"]
